added Travis build and fixed LaunchConfiguration